# oikomaticz

./: .gitattributes  .gitignore  CMakeLists.txt  History.txt  INSTALL.md  README.md  appversion.default  getgit.cmake
hardware/: AccuWeather.cpp  Arilux.cpp  AtagOne.cpp  BleBox.cpp  ColorSwitch.cpp  DarkSky.cpp  Dummy.cpp  Ec3kMeterTCP.cpp  EcoCompteur.cpp  EcoDevices.cpp  EnphaseAPI.cpp  EvohomeBase.cpp  EvohomeRadio.cpp  EvohomeWeb.h  GoodweAPI.cpp  HEOS.cpp  HarmonyHub.cpp  Honeywell.cpp  HttpPoller.cpp  ICYThermostat.cpp  InComfort.cpp  Kodi.cpp  LogitechMediaServer.cpp  MQTT.cpp  MQTT.h  MySensorsBase.cpp  NefitEasy.cpp  Nest.cpp  NestOAuthAPI.cpp  Netatmo.cpp  OTGWBase.cpp  OnkyoAVTCP.cpp  OpenWeatherMap.cpp  OpenZWave.cpp  P1MeterBase.cpp  P1MeterBase.h  P1MeterSerial.cpp  P1MeterTCP.cpp  PVOutput_Input.cpp  PanasonicTV.cpp  (+19 more)
hardware/1Wire/: 1WireForWindows.cpp
hardware/PhilipsHue/: PhilipsHue.cpp  PhilipsHueSensors.cpp
hardware/cayenne_lpp/: CayenneLPP_Dec.cpp
hardware/plugins/: PluginManager.cpp  PluginProtocols.cpp
libs/: CMakeLists.txt
libs/evohomeclient/: README.md  evoconfig.sample
libs/evohomeclient/demo/: CMakeLists.txt
libs/evohomeclient/demo/src/: demo-defaults.hpp  evo-cmd.cpp  evo-demo.cpp  evo-schedule-backup.cpp  evo-setmode.cpp  evo-settemp.cpp
libs/evohomeclient/include/jsoncpp/: json_reader.cpp  json_value.cpp  json_writer.cpp
libs/evohomeclient/src/common/: jsoncppbridge.hpp  messages.hpp
libs/evohomeclient/src/connection/: EvoHTTPBridge.cpp  EvoHTTPBridge.hpp  RESTClient.cpp  RESTClient.hpp
libs/evohomeclient/src/evohome/: devices.hpp
libs/evohomeclient/src/evohomeclient/: API.hpp  evohomeclient.cpp  evohomeclient.hpp
libs/evohomeclient/src/evohomeclient2/: API2.hpp  evohomeclient2.cpp  evohomeclient2.hpp
libs/evohomeclient/src/time/: IsoTimeString.cpp  IsoTimeString.hpp
libs/iamserver/: IamService.cpp
libs/jwt-cpp/traits/kazuho-picojson/: traits.h
libs/open-zwave-control-panel/: ozwcp.cpp
libs/openzwave/control_panel/: ozwcp.cpp
main/: Camera.cpp  EventSystem.cpp  EventSystem.h  IFTTT.cpp  LuaCommon.cpp  LuaHandler.cpp  SQLHelper.cpp  Scheduler.cpp  WebServer.cpp  WebServer.h  domoticz.cpp  mainworker.cpp
msbuild/: Version.h  WindowsHelper.cpp  domoticz.rc  domoticz.vcxproj  domoticz.vcxproj.filters
msbuild/WindowsInstaller/: DomoticzSetup.iss
notifications/: NotificationGCM.cpp  NotificationKodi.cpp  NotificationPushbullet.cpp  NotificationTelegram.cpp
push/: BasePush.cpp  FibaroPush.cpp  GooglePubSubPush.cpp  HttpPush.cpp  InfluxPush.cpp
scripts/: oikomaticz.conf  oikomaticz.sh  readme.txt
scripts/logrotate/: oikomaticz
src/: CMakeLists.txt  stdafx.h
src/hardware/: 1Wire.cpp  1Wire.h  ASyncSerial.cpp  ASyncSerial.h  AccuWeather.cpp  AccuWeather.h  AirconWithMe.cpp  AirconWithMe.h  AlfenEve.cpp  AlfenEve.h  AnnaThermostat.cpp  AnnaThermostat.h  Arilux.cpp  Arilux.h  AtagOne.cpp  AtagOne.h  BleBox.cpp  BleBox.h  Buienradar.cpp  Buienradar.h  ColorSwitch.cpp  ColorSwitch.h  Comm5SMTCP.cpp  Comm5SMTCP.h  Comm5Serial.cpp  Comm5Serial.h  Comm5TCP.cpp  Comm5TCP.h  CounterHelper.cpp  CurrentCostMeterBase.cpp  CurrentCostMeterBase.h  CurrentCostMeterSerial.cpp  CurrentCostMeterSerial.h  CurrentCostMeterTCP.cpp  Daikin.cpp  Daikin.h  DarkSky.cpp  DarkSky.h  DavisLoggerSerial.cpp  DavisLoggerSerial.h  (+242 more)
src/hardware/1Wire/: 1WireByKernel.cpp  1WireByKernel.h  (+3 more)
src/main/: BaroForecastCalculator.cpp  Camera.cpp  CmdLine.h  EventSystem.cpp  EventSystem.h  EventsPythonDevice.cpp  EventsPythonDevice.h  EventsPythonModule.cpp  EventsPythonModule.h  Helper.cpp  Helper.h  IFTTT.cpp  LuaCommon.cpp  LuaHandler.cpp  LuaTable.cpp  LuaTable.h  RFXNames.cpp  RFXNames.h  RFXtrx.h  SQLHelper.cpp  SQLHelper.h  Scheduler.cpp  Scheduler.h  SignalHandler.cpp  SunRiseSet.cpp  TrendCalculator.cpp  WebServer.cpp  WebServer.h  WebServerCmds.cpp  WebServerCommands.cpp  WebServerHandleGraph.cpp  WebServerHelper.cpp  WebServerHelper.h  WindCalculation.cpp  appversion.h  clx_unzip.h  dirent_windows.h  dzVents.cpp  json_helper.cpp  json_helper.h  (+9 more)
src/notifications/: NotificationBase.cpp  NotificationBase.h  NotificationEmail.cpp  NotificationFCM.cpp  NotificationGCM.cpp  NotificationHTTP.cpp  NotificationHelper.cpp  NotificationHelper.h  NotificationKodi.cpp  NotificationKodi.h  NotificationLogitechMediaServer.cpp  NotificationProwl.cpp  NotificationPushalot.cpp  NotificationPushbullet.cpp  NotificationPushover.cpp  NotificationPushsafer.cpp  NotificationSMS.cpp  NotificationTelegram.cpp  xmbcclient.h
src/protocols/: ASyncSerial.cpp  ASyncSerial.h  ASyncTCP.cpp  ASyncTCP.h  HTTPClient.cpp  HTTPClient.h  RESTClient.cpp  RESTClient.hpp  SMTPClient.cpp  UrlEncode.cpp  csocket.cpp  sock_port.h
src/push/: BasePush.cpp  BasePush.h  FibaroPush.cpp  FibaroPush.h  GooglePubSubPush.cpp  GooglePubSubPush.h  HttpPush.cpp  HttpPush.h  InfluxPush.cpp  InfluxPush.h  MQTTPush.cpp  MQTTPush.h  WebsocketPush.cpp  WebsocketPush.h
src/smtpclient/: SMTPClient.cpp
src/tcpserver/: TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h
src/typedef/: RFswitchtypes.hpp  common.hpp  hardwaretypes.hpp  mediaplayerstates.hpp  metertypes.hpp  notificationtypes.hpp  switchtypes.hpp  timertypes.hpp
src/webserver/: Base64.cpp  GZipHelper.h  WebsocketHandler.cpp  WebsocketHandler.h  Websockets.cpp  cWebem.cpp  cWebem.h  connection.cpp  connection_manager.cpp  connection_manager.hpp  fastcgi.cpp  proxycereal.hpp  proxyclient.cpp  proxyclient.h  proxycommon.cpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp  utf.hpp
webserver/: GZipHelper.h  WebsocketHandler.cpp  Websockets.cpp
www/: html5.appcache  index.html  switch_icons.txt
www/app/: DashboardController.js  DevicesController.js  HardwareController.js  LightsController.js  SetupController.js  TemperatureController.js  UtilityController.js  app.js
www/css/: legacy.css
www/js/: domoticz.js  domoticzdevices.js
www/secpanel/: index.html
www/views/: about.html  hardware.html  login.html  offline.html  setup.html  utility.html
(+132 files in other folders)
